--- a/AWS/AWS.csproj
+++ b/AWS/AWS.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
+	  <InvariantGlobalization>true</InvariantGlobalization>
+	  <RuntimeIdentifiers>linux-x64;win-x64</RuntimeIdentifiers>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
